# ai-security-training-lab

./: .dockerignore  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt  test_openai_key.py
owasp/llm/01/: attack.py  mitigate.py
owasp/llm/02/: attack_output_manipulation.py  attack_overfitting.py  mitigate_output_manipulation.py  mitigate_overfitting.py
owasp/llm/03/: attack.py  mitigate.py
owasp/llm/06/: attack.py  mitigate.py
owasp/llm/10/: attack.py  mitigate.py
