[project]
name = "ai-security-training-lab"
version = "0.9.0"
description = "Hands-on exercises for AI security based on OWASP Top 10 for LLM Applications."
authors = [{ name = "Josh Rosenthal", email = "" }]
license = { text = "MIT" }
dependencies = [
    "openai",
    "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"